# 42

./: .bazelrc  .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt  base.h  common.h  flags.cpp  flags.h  logging.cpp  logging.h  ostream_newline.cpp  ostream_newline.h  static_initialization.cpp  static_initialization.h  time_class.cpp  time_class.h
learn/: unistd_test.cpp
main/: BUILD  CMakeLists.txt  main.cpp
strings/: BUILD  CMakeLists.txt  string_split.cpp  string_split.h
